force-app/main/default/objects/Bulk_Record_Upload_Extension__mdt/Bulk_Record_Upload_Extension__mdt.object-meta.xml
<CustomObject>
    <description
  >Registers one reviewed, source-controlled Apex extension class that runs before row mapping and after processing for a Bulk Record Upload Process.</description>
    <label>Bulk Record Upload Extension</label>
    <pluralLabel>Bulk Record Upload Extensions</pluralLabel>
</CustomObject>