force-app/main/default/objects/Bulk_Record_Upload_Extension__mdt/fields/ClassName__c.field-meta.xml
<CustomField>
  <fullName>ClassName__c</fullName>
  <description
  >Exact Apex class name implementing BulkRecordUploadExtension in a reviewed, source-controlled registration. Invalid classes fail closed.</description>
  <inlineHelpText
  >Deploy the exact global Apex class name through reviewed source. The class must implement BulkRecordUploadExtension.</inlineHelpText>
  <label>Extension Class Name</label>
  <length>255</length>
  <required>true</required>
  <type>Text</type>
</CustomField>