force-app/main/default/objects/Bulk_Record_Upload_Extension__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
  <fullName>IsActive__c</fullName>
  <defaultValue>true</defaultValue>
  <description
  >Controls whether this extension runs for its process.</description>
  <inlineHelpText
  >Clear to stop running this extension without deleting its configuration history.</inlineHelpText>
  <label>Used by Process</label>
  <type>Checkbox</type>
</CustomField>