force-app/main/default/objects/Bulk_Record_Upload_Extension__mdt/fields/ProcessDeveloperName__c.field-meta.xml
<CustomField>
  <fullName>ProcessDeveloperName__c</fullName>
  <description
  >Identifies the Bulk Record Upload Process that runs this extension.</description>
  <inlineHelpText
  >Enter the exact Developer Name of the owning Bulk Record Upload Process.</inlineHelpText>
  <label>Upload Process API Name</label>
  <length>80</length>
  <required>true</required>
  <type>Text</type>
</CustomField>