force-app/main/default/objects/Bulk_Record_Upload_Extension__mdt/fields/SortOrder__c.field-meta.xml
<CustomField>
  <fullName>SortOrder__c</fullName>
  <description
  >Controls the order multiple active extensions run in for the same process.</description>
  <inlineHelpText
  >Enter a whole number. Lower numbers run first. Values must be unique within a process.</inlineHelpText>
  <label>Sort Order</label>
  <precision>3</precision>
  <required>true</required>
  <scale>0</scale>
  <type>Number</type>
</CustomField>